# seven-seas-successes

./: .gitignore  Cargo.toml  Makefile.toml  README.md  build.sh  start.sh
backend/: Cargo.toml
backend/src/: main.rs
frontend/: Cargo.toml  Trunk.toml  index.html  vercel.json
frontend/src/: main.rs
frontend/static/: styles.css
src/: main.rs
