[package]
name = "seven_seas_successes"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8.5"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rocket_cors = "0.6.0"
jsonwebtoken = "9.3.0"
dotenv = "0.15.0"
chrono = { version = "0.4", features = ["serde"] }