[package]
name = "seven_seas_successes"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"]}
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2"
log = "0.4"
gloo-net = "0.6"
web-sys = { version = "0.3.76", features = ["HtmlInputElement", "WebSocket"] }
yew-websocket = "1.21.0"
anyhow = "1.0.40"

[package.metadata.trunk]
public-url = "/"